Fixed scanning for gameboard and swapping; Dealing with timings of after swap and remove gems, adding new gems and moving gems

--- a/sass/bejeweled.scss
+++ b/sass/bejeweled.scss
@@ -35,6 +35,7 @@ ul, ol {
 .tile {
 	border: 1px solid #ccc;
 	box-sizing: border-box;
+  font-size: 12px;
 	text-align: center;
 	position: absolute;
 	top: 0;
@@ -58,7 +59,7 @@ ul, ol {
 	}
 
 	&.current {
-		border: 3px solide pink;
+		border: 3px solid pink;
 	}
 }
 
