--- a/sass/bejeweled.scss
+++ b/sass/bejeweled.scss
@@ -30,10 +30,11 @@ ul, ol {
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=*/
 .gameboard {
 	position: relative;
+  overflow: hidden;
 }
 
 .tile {
-	border: 1px solid #ccc;
+	border: 1px solid #eee;
 	box-sizing: border-box;
   font-size: 12px;
 	text-align: center;
