--- a/stylesheets/bejeweled.css
+++ b/stylesheets/bejeweled.css
@@ -222,10 +222,11 @@ ul, ol {
 /* Tileboard Styling
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=*/
 .gameboard {
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
 
 .tile {
-  border: 1px solid #ccc;
+  border: 1px solid #eee;
   box-sizing: border-box;
   font-size: 12px;
   text-align: center;
